--- a/Products.html
+++ b/Products.html
@@ -137,7 +137,7 @@
             <i class="fa-solid text-2xl fa-arrow-right"></i>
           </span>
           <button
-            class="free-session text-white my-8 bg-black1 rounded-[35px] py-3 px-4 border border-white border-opacity-50 shadow-3xl"
+            class="free-session text-white my-8 md:text-[14px] bg-black1 rounded-[35px] py-3 px-4 border border-white border-opacity-50 shadow-3xl"
           >
             Claim Your Free Session
           </button>
