--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <i class="fa-solid text-2xl fa-arrow-right"></i>
             </span>
             <button
-              class="free-session text-white my-8 bg-black1 rounded-[35px] py-3 px-4 border border-white border-opacity-50 shadow-3xl"
+              class="free-session text-white my-8 md:text-[14px] bg-black1 rounded-[35px] py-3 px-4 border border-white border-opacity-50 shadow-3xl"
             >
               Claim Your Free Session
             </button>
@@ -146,7 +146,7 @@
         </div>
 
         <div
-          class="mt-24 md:mt-[3.5rem] w-[70%] md:w-[90%] m-auto text-center text-white flex items-center justify-center flex-col gap-8"
+          class="mt-24 md:mt-[1.5rem] w-[70%] md:w-[90%] m-auto text-center text-white flex items-center justify-center flex-col gap-8"
         >
           <h2
             class="font-medium leading-[4rem] md:leading-[2.5rem] text-[56px] md:text-[46px]"
