--- a/Child Astrology.html
+++ b/Child Astrology.html
@@ -133,7 +133,7 @@
             <i class="fa-solid text-2xl fa-arrow-right"></i>
           </span>
           <button
-            class="free-session text-white my-8 bg-black1 rounded-[35px] py-3 px-4 border border-white border-opacity-50 shadow-3xl"
+            class="free-session md:text-[14px] text-white my-8 bg-black1 rounded-[35px] py-3 px-4 border border-white border-opacity-50 shadow-3xl"
           >
             Claim Your Free Session
           </button>
@@ -254,18 +254,18 @@
               minim Lorem id eiusmod. Tempor ad Lorem ea do commodo dolor in in
               aliqua quis laboris in.
             </p>
-            <div class="flex items-start justify-between mt-8">
-              <p class="text-3xl">₹ 4000</p>
+            <div class="flex items-start md:items-center justify-between mt-8">
+              <p class="text-3xl md:text-2xl">₹ 4000</p>
               <div class="flex items-center justify-between gap-2">
                 <p
-                  class="rounded-full text-xl text-orange-500 px-4 py-2 border border-orange-500 bg-orange-100"
+                  class="rounded-full text-xl md:text-lg text-orange-500 px-4 py-2 border border-orange-500 bg-orange-100"
                 >
                   <i class="fas fa-star"></i>
                   &nbsp
                   <span class="">4.8</span>
                 </p>
                 <p
-                  class="rounded-full text-xl text-blue1 px-4 py-2 border border-blue1 bg-lightBlue1"
+                  class="rounded-full text-xl md:text-lg text-blue1 px-4 py-2 border border-blue1 bg-lightBlue1"
                 >
                   <i class="fa-solid fa-comment-dots"></i>
                   &nbsp
@@ -274,8 +274,8 @@
               </div>
             </div>
             <div class="flex items-start justify-between mt-2">
-              <p class="text-3xl w-1/3 line-through">₹ 8000</p>
-              <p class="text-2xl text-end text-gray-500">
+              <p class="text-3xl w-1/3 line-through md:text-lg">₹ 8000</p>
+              <p class="text-2xl md:text-xl text-end text-gray-500">
                 <span class="text-green1">90% </span>of the buyers recommend
                 this
               </p>
