--- a/index.html
+++ b/index.html
@@ -151,13 +151,15 @@
           <h2
             class="font-medium leading-[4rem] md:leading-[2.5rem] text-[56px] md:text-[46px]"
           >
-            Uncover the answers and gain clarity with our expert guidance.
+            Navigate life's complex journey with the right trustworthy Vedic guide.
+Asli Astro awaits you.
           </h2>
           <p class="text-xl text-white w-[80%] md:text-lg">
-            Explore the power of Vedic astrology, tarot, reiki, and more. Gain
-            insights into your career, relationships, and life's challenges.
+            Secure your career, relationships, marriage and children’s lives with the
+power of Vedic astrology. Make better decisions for yourself and your loved
+ones with an insightful understanding of your future.
             <span class="text-orange-600">
-              Speak to an expert astrologer today.</span
+              Get your Vedic reading now</span
             >
           </p>
           <button
@@ -182,11 +184,13 @@
           class="text-xl flex gap-4 items-center justify-center my-4 font-medium text-orange-600"
         >
           <img src="./images/star-sign.svg" alt="" />
-          What we offer
+          What you get
         </h2>
         <p class="text-center w-1/2 md:w-[80%] text-2xl mx-auto">
-          Explore how our diverse astrology services cater to individuals from
-          all walks of life, guiding them towards a brighter future.
+          Discover unique solutions to your life’s problems, best opportunities for success,
+karmic patterns from your past lives and more with our help. Our Vedic astrologer
+will study your Kundali to analyse the ruling planetary positions and the
+Nakshatras to help you manifest your desires.
         </p>
         <div class="relative w-full h-[20rem] mt-[6.5rem] mx-auto md:hidden">
           <div
@@ -294,10 +298,10 @@
         class="text-xl flex gap-4 items-center justify-start font-medium text-orange-600"
       >
         <img src="./images/star-sign.svg" alt="" />
-        Our Services
+        Our Expertise
       </h2>
       <h3 class="text-4xl md:ml-2">
-        Personalized Astrological Guidance Services
+        Trusted Vedic Astrology Guidance
       </h3>
       <div class="services-cards mt-8 md:mt-4">
         <div class="slider1">
@@ -334,15 +338,19 @@
               <div class="h-[1px] w-full my-2 bg-gray-400"></div>
               <div class="description text-sm">
                 <p class="">
-                  Get guidance to support their development & growth with
-                  personalised astrological report
+                  Support your child’s development & growth in the best way possible by unlocking
+their life's karmic potential with precise Vedic advice. Help them find success by
+aligning their actions with their ruling nakshatras and grahas (planets). Dive deep
+into your child’s Janam Kundli, revealing:
                 </p>
                 <p class="">Includes:</p>
 
                 <ol class="list-disc ml-4">
-                  <li>Kundli and Divisional birth charts</li>
+                  <li>Stored karma, doshas and its influence</li>
                   <li>horoscope analysis</li>
-                  <li>Child's Ayurvedic Dosha +more</li>
+                  <li>Ayurvedic body type for personalized wellness</li>
+                  <li>Favourable and unfavourable grahas</li>
+                  <li>And much more!</li>
                 </ol>
               </div>
             </div>
@@ -673,13 +681,12 @@
         <h3
           class="text-5xl text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-400 to-orange-200"
         >
-          Explore your personalized kundali alignment for a cosmic connection
-          with your partner.
+          Find your soulmate with Our Personalized Kundali Matching Report.
         </h3>
         <p class="text-center my-4 text-white w-[80%] mx-auto">
-          Get clarity and assurance in your choices with our free Kunadli
-          matching service. Gain a understanding of your future and approach it
-          with peace of mind.
+          Discover your ideal partner with the right Vedic kriya for a match truly made in
+heaven. Gain profound insights into your better half and your future with our
+Kundali matching service for a successful happy marriage.
         </p>
         <img
           src="./images/kundali-graphic.png"
@@ -764,7 +771,7 @@
           <img src="./images/star-sign.svg" alt="" />
           Testimonials
         </h2>
-        <h3 class="text-4xl w-fit font-medium mx-auto">What our users say</h3>
+        <h3 class="text-4xl w-fit font-medium mx-auto">What the Asli Astro community says</h3>
         <p class="text-xl my-8 w-[65%] mx-auto text-center leading-8">
           <a class="text-orange-600" href="/"> Join our whatsapp community </a>
           to conect with skilled individuals with experience, knowledge, and
@@ -854,13 +861,14 @@
         <img src="./images/ganesh.png" class="block md:hidden" alt="" />
         <div class="details">
           <p class="text-3xl text-center">
-            Get insights on love, career, and life’s challenges from astrologers
-            in just <span class="text-orange-600">24 hours</span>.
+            Get answers on love, career, and life's challenges from AsliAstro Vedic astrologers in
+just <span class="text-orange-600">24 hours</span>.
           </p>
           <button
             class="mx-auto capitalize md:font-medium flex items-center justify-center mt-4 shadow-btnShadow2 gap-2 bg-orange-600 text-white px-8 py-3 rounded-2xl"
           >
-            Claim your free session today
+            Join our Whatsapp group for free.
+            Only the first 100 people will be permitted.
             <img src="./images/right-arrow.svg" alt="" />
           </button>
         </div>
@@ -880,7 +888,7 @@
       >
         <img src="./images/AsliAstro.png" class="" alt="" />
         <p class="text-gray-400">
-          Get daily insight and daily insiration straight to your inbox
+          Get curated morning messages to start your day on a blessed note
         </p>
         <form class="flex flex-row border-b-2 w-fit pb-1">
           <input
