payment and fixes

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           Explore how our diverse astrology services cater to individuals from
           all walks of life, guiding them towards a brighter future.
         </p>
-        <div class="relative w-full h-[20rem] mt-[6.5rem] mx-auto md:hidden">
+        <div class="relative w-[86%] h-[20rem] mt-[8.5rem] mx-auto md:hidden">
           <div
             class="w-[170px] h-[192px] shadow-card1 bg-white pt-4 px-4 absolute top-0 left-0 -rotate-2"
           >
@@ -352,7 +352,187 @@
               <button
                 class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
               >
-                View Details
+                <a href="./Child-Astrology.html">View Details</a>
+              </button>
+              <button
+                class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
+              >
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div
+            class="!flex flex-col justify-between gap-2 !h-[600px] shadow-md bg-white rounded-lg py-6 px-6"
+          >
+            <img
+              src="./images/services/1.png"
+              class="w-full h-[250px] object-cover"
+              alt=""
+            />
+            <div class="details">
+              <div
+                class="flex flex-row justify-between font-semibold text-xl items-center"
+              >
+                <h4 class="text-2xl">Career Astrology</h4>
+                <p class="text-end">₹ 4000</p>
+              </div>
+              <div class="flex flex-row justify-between my-2 items-start">
+                <p
+                  class="flex text-sm font-normal items-center justify-start gap-2 text-gray-600"
+                >
+                  <img src="./images/star-review.svg" alt="" />4.2
+                  <span class="text-gray-400">&nbsp;(25 reviews)</span>
+                </p>
+                <p class="text-end text-green1 text-[17px] md:text-sm">
+                  25% off on 1<sup>st</sup> booking <br /><a
+                    class="text-[15px]"
+                    href="/"
+                    ><u>See more offers</u></a
+                  >
+                </p>
+              </div>
+              <div class="h-[1px] w-full my-2 bg-gray-400"></div>
+              <div class="description text-sm">
+                <p class="">
+                  Get guidance to support their development & growth with
+                  personalised astrological report
+                </p>
+                <p class="">Includes:</p>
+
+                <ol class="list-disc ml-4">
+                  <li>Kundli and Divisional birth charts</li>
+                  <li>horoscope analysis</li>
+                  <li>Child's Ayurvedic Dosha +more</li>
+                </ol>
+              </div>
+            </div>
+            <div
+              class="!my-0 !important actions flex items-center justify-between md:gap-2"
+            >
+              <button
+                class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
+              >
+                <a href="./Career-Astrology.html">View Details</a>
+              </button>
+              <button
+                class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
+              >
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div
+            class="!flex flex-col justify-between gap-2 !h-[600px] shadow-md bg-white rounded-lg py-6 px-6"
+          >
+            <img
+              src="./images/services/1.png"
+              class="w-full h-[250px] object-cover"
+              alt=""
+            />
+            <div class="details">
+              <div
+                class="flex flex-row justify-between font-semibold text-xl items-center"
+              >
+                <h4 class="text-2xl">Child Astrology</h4>
+                <p class="text-end">₹ 4000</p>
+              </div>
+              <div class="flex flex-row justify-between my-2 items-start">
+                <p
+                  class="flex text-sm font-normal items-center justify-start gap-2 text-gray-600"
+                >
+                  <img src="./images/star-review.svg" alt="" />4.2
+                  <span class="text-gray-400">&nbsp;(25 reviews)</span>
+                </p>
+                <p class="text-end text-green1 text-[17px] md:text-sm">
+                  25% off on 1<sup>st</sup> booking <br /><a
+                    class="text-[15px]"
+                    href="/"
+                    ><u>See more offers</u></a
+                  >
+                </p>
+              </div>
+              <div class="h-[1px] w-full my-2 bg-gray-400"></div>
+              <div class="description text-sm">
+                <p class="">
+                  Get guidance to support their development & growth with
+                  personalised astrological report
+                </p>
+                <p class="">Includes:</p>
+
+                <ol class="list-disc ml-4">
+                  <li>Kundli and Divisional birth charts</li>
+                  <li>horoscope analysis</li>
+                  <li>Child's Ayurvedic Dosha +more</li>
+                </ol>
+              </div>
+            </div>
+            <div
+              class="!my-0 !important actions flex items-center justify-between md:gap-2"
+            >
+              <button
+                class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
+              >
+                <a href="./Child-Astrology.html">View Details</a>
+              </button>
+              <button
+                class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
+              >
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <div
+            class="!flex flex-col justify-between gap-2 !h-[600px] shadow-md bg-white rounded-lg py-6 px-6"
+          >
+            <img
+              src="./images/services/1.png"
+              class="w-full h-[250px] object-cover"
+              alt=""
+            />
+            <div class="details">
+              <div
+                class="flex flex-row justify-between font-semibold text-xl items-center"
+              >
+                <h4 class="text-2xl">Child Astrology</h4>
+                <p class="text-end">₹ 4000</p>
+              </div>
+              <div class="flex flex-row justify-between my-2 items-start">
+                <p
+                  class="flex text-sm font-normal items-center justify-start gap-2 text-gray-600"
+                >
+                  <img src="./images/star-review.svg" alt="" />4.2
+                  <span class="text-gray-400">&nbsp;(25 reviews)</span>
+                </p>
+                <p class="text-end text-green1 text-[17px] md:text-sm">
+                  25% off on 1<sup>st</sup> booking <br /><a
+                    class="text-[15px]"
+                    href="/"
+                    ><u>See more offers</u></a
+                  >
+                </p>
+              </div>
+              <div class="h-[1px] w-full my-2 bg-gray-400"></div>
+              <div class="description text-sm">
+                <p class="">
+                  Get guidance to support their development & growth with
+                  personalised astrological report
+                </p>
+                <p class="">Includes:</p>
+
+                <ol class="list-disc ml-4">
+                  <li>Kundli and Divisional birth charts</li>
+                  <li>horoscope analysis</li>
+                  <li>Child's Ayurvedic Dosha +more</li>
+                </ol>
+              </div>
+            </div>
+            <div
+              class="!my-0 !important actions flex items-center justify-between md:gap-2"
+            >
+              <button
+                class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
+              >
+                <a href="./Child-Astrology.html">View Details</a>
               </button>
               <button
                 class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
@@ -472,187 +652,7 @@
               <button
                 class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
               >
-                View Details
-              </button>
-              <button
-                class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
-              >
-                Buy Now
-              </button>
-            </div>
-          </div>
-          <div
-            class="!flex flex-col justify-between gap-2 !h-[600px] shadow-md bg-white rounded-lg py-6 px-6"
-          >
-            <img
-              src="./images/services/1.png"
-              class="w-full h-[250px] object-cover"
-              alt=""
-            />
-            <div class="details">
-              <div
-                class="flex flex-row justify-between font-semibold text-xl items-center"
-              >
-                <h4 class="text-2xl">Child Astrology</h4>
-                <p class="text-end">₹ 4000</p>
-              </div>
-              <div class="flex flex-row justify-between my-2 items-start">
-                <p
-                  class="flex text-sm font-normal items-center justify-start gap-2 text-gray-600"
-                >
-                  <img src="./images/star-review.svg" alt="" />4.2
-                  <span class="text-gray-400">&nbsp;(25 reviews)</span>
-                </p>
-                <p class="text-end text-green1 text-[17px] md:text-sm">
-                  25% off on 1<sup>st</sup> booking <br /><a
-                    class="text-[15px]"
-                    href="/"
-                    ><u>See more offers</u></a
-                  >
-                </p>
-              </div>
-              <div class="h-[1px] w-full my-2 bg-gray-400"></div>
-              <div class="description text-sm">
-                <p class="">
-                  Get guidance to support their development & growth with
-                  personalised astrological report
-                </p>
-                <p class="">Includes:</p>
-
-                <ol class="list-disc ml-4">
-                  <li>Kundli and Divisional birth charts</li>
-                  <li>horoscope analysis</li>
-                  <li>Child's Ayurvedic Dosha +more</li>
-                </ol>
-              </div>
-            </div>
-            <div
-              class="!my-0 !important actions flex items-center justify-between md:gap-2"
-            >
-              <button
-                class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
-              >
-                View Details
-              </button>
-              <button
-                class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
-              >
-                Buy Now
-              </button>
-            </div>
-          </div>
-          <div
-            class="!flex flex-col justify-between gap-2 !h-[600px] shadow-md bg-white rounded-lg py-6 px-6"
-          >
-            <img
-              src="./images/services/1.png"
-              class="w-full h-[250px] object-cover"
-              alt=""
-            />
-            <div class="details">
-              <div
-                class="flex flex-row justify-between font-semibold text-xl items-center"
-              >
-                <h4 class="text-2xl">Child Astrology</h4>
-                <p class="text-end">₹ 4000</p>
-              </div>
-              <div class="flex flex-row justify-between my-2 items-start">
-                <p
-                  class="flex text-sm font-normal items-center justify-start gap-2 text-gray-600"
-                >
-                  <img src="./images/star-review.svg" alt="" />4.2
-                  <span class="text-gray-400">&nbsp;(25 reviews)</span>
-                </p>
-                <p class="text-end text-green1 text-[17px] md:text-sm">
-                  25% off on 1<sup>st</sup> booking <br /><a
-                    class="text-[15px]"
-                    href="/"
-                    ><u>See more offers</u></a
-                  >
-                </p>
-              </div>
-              <div class="h-[1px] w-full my-2 bg-gray-400"></div>
-              <div class="description text-sm">
-                <p class="">
-                  Get guidance to support their development & growth with
-                  personalised astrological report
-                </p>
-                <p class="">Includes:</p>
-
-                <ol class="list-disc ml-4">
-                  <li>Kundli and Divisional birth charts</li>
-                  <li>horoscope analysis</li>
-                  <li>Child's Ayurvedic Dosha +more</li>
-                </ol>
-              </div>
-            </div>
-            <div
-              class="!my-0 !important actions flex items-center justify-between md:gap-2"
-            >
-              <button
-                class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
-              >
-                View Details
-              </button>
-              <button
-                class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
-              >
-                Buy Now
-              </button>
-            </div>
-          </div>
-          <div
-            class="!flex flex-col justify-between gap-2 !h-[600px] shadow-md bg-white rounded-lg py-6 px-6"
-          >
-            <img
-              src="./images/services/1.png"
-              class="w-full h-[250px] object-cover"
-              alt=""
-            />
-            <div class="details">
-              <div
-                class="flex flex-row justify-between font-semibold text-xl items-center"
-              >
-                <h4 class="text-2xl">Child Astrology</h4>
-                <p class="text-end">₹ 4000</p>
-              </div>
-              <div class="flex flex-row justify-between my-2 items-start">
-                <p
-                  class="flex text-sm font-normal items-center justify-start gap-2 text-gray-600"
-                >
-                  <img src="./images/star-review.svg" alt="" />4.2
-                  <span class="text-gray-400">&nbsp;(25 reviews)</span>
-                </p>
-                <p class="text-end text-green1 text-[17px] md:text-sm">
-                  25% off on 1<sup>st</sup> booking <br /><a
-                    class="text-[15px]"
-                    href="/"
-                    ><u>See more offers</u></a
-                  >
-                </p>
-              </div>
-              <div class="h-[1px] w-full my-2 bg-gray-400"></div>
-              <div class="description text-sm">
-                <p class="">
-                  Get guidance to support their development & growth with
-                  personalised astrological report
-                </p>
-                <p class="">Includes:</p>
-
-                <ol class="list-disc ml-4">
-                  <li>Kundli and Divisional birth charts</li>
-                  <li>horoscope analysis</li>
-                  <li>Child's Ayurvedic Dosha +more</li>
-                </ol>
-              </div>
-            </div>
-            <div
-              class="!my-0 !important actions flex items-center justify-between md:gap-2"
-            >
-              <button
-                class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
-              >
-                View Details
+                <a href="./Child-Astrology.html">View Details</a>
               </button>
               <button
                 class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
@@ -822,7 +822,7 @@
             alt=""
           />
         </div>
-        <div class="slider1">
+        <div class="!hidden md:!block slider1">
           <img
             src="./images/testimonial.png"
             class="w-[290px] h-[220px] object-contain"
