--- a/payment/Career-Payment.html
+++ b/payment/Career-Payment.html
@@ -230,6 +230,13 @@
               <span>Total Due Today</span><span>₹1,699</span>
             </p>
           </div>
+          <button
+            type="submit"
+            id="proceedToPaymentButtonDesktop"
+            class="hidden lg:block w-full bg-orange-600 text-white font-bold py-3 px-4 rounded mt-6 hover:bg-orange-700 transition duration-300"
+          >
+            PROCEED TO PAYMENT
+          </button>
         </div>
 
         <!-- Left column (form) -->
@@ -477,8 +484,8 @@
       <!-- PROCEED TO PAYMENT button outside the grid -->
       <button
         type="submit"
-        id="proceedToPaymentButton"
-        class="w-full bg-orange-600 text-white font-bold py-3 px-4 rounded mt-6 hover:bg-orange-700 transition duration-300"
+        id="proceedToPaymentButtonMobile"
+        class="lg:hidden w-full bg-orange-600 text-white font-bold py-3 px-4 rounded mt-6 hover:bg-orange-700 transition duration-300"
       >
         PROCEED TO PAYMENT
       </button>
