--- a/index.html
+++ b/index.html
@@ -149,44 +149,43 @@
           class="mt-24 md:mt-[1.5rem] w-[70%] md:w-[90%] m-auto text-center text-white flex items-center justify-center flex-col gap-8"
         >
           <h2
-            class="font-medium leading-[4rem] md:leading-[2.5rem] text-[56px] md:text-[46px]"
+            class="font-semibold capitalize leading-[4rem] text-orange-600 md:leading-[2.5rem] text-[56px] md:text-[38px]"
           >
-            Uncover the answers and gain clarity with our expert guidance.
+            Navigate life's complex journey with the right trustworthy Vedic
+            guide
           </h2>
-          <p class="text-xl text-white w-[80%] md:text-lg">
-            Explore the power of Vedic astrology, tarot, reiki, and more. Gain
-            insights into your career, relationships, and life's challenges.
-            <span class="text-orange-600">
-              Speak to an expert astrologer today.</span
-            >
+          <p class="text-xl font-medium text-white w-[80%] md:text-lg">
+            Secure your career, relationships, marriage and children’s lives
+            with the power of Vedic astrology. Make better decisions for
+            yourself and your loved ones with an insightful understanding of
+            your future.
           </p>
           <button
-            class="free-session text-xl flex items-center justify-center gap-4 bg-black2 rounded-[35px] py-3 px-10 border border-black2 shadow-3xl"
+            class="text-xl flex items-center justify-center gap-4 md:gap-2 bg-black2 rounded-[35px] py-3 px-10 md:px-5 border border-black2 shadow-3xl text-white"
           >
-            Claim Your Free Session
-            <img
-              class="aspect-square w-8"
-              src="images/right-arrow.svg"
-              alt=""
-            />
+            Get your Vedic reading now
+            <i class="fas fa-arrow-right text-4xl md:text-2xl"></i>
           </button>
         </div>
       </div>
     </section>
 
     <section
-      class="offer overflow-x-hidden w-screen max-w-full h-screen pt-[6rem] md:pt-[3rem]"
+      class="offer overflow-x-hidden md:overflow-hidden w-screen max-w-full h-screen md:h-fit pt-[6rem] md:pt-[3rem]"
     >
       <div class="container mx-auto">
         <h2
           class="text-xl flex gap-4 items-center justify-center my-4 font-medium text-orange-600"
         >
           <img src="./images/star-sign.svg" alt="" />
-          What we offer
+          What you get
         </h2>
         <p class="text-center w-1/2 md:w-[80%] text-2xl mx-auto">
-          Explore how our diverse astrology services cater to individuals from
-          all walks of life, guiding them towards a brighter future.
+          Discover unique solutions to your life’s problems, best opportunities
+          for success, karmic patterns from your past lives and more with our
+          help. Our Vedic astrologer will study your Kundali to analyse the
+          ruling planetary positions and the Nakshatras to help you manifest
+          your desires.
         </p>
         <div class="relative w-[86%] h-[20rem] mt-[8.5rem] mx-auto md:hidden">
           <div
@@ -288,79 +287,83 @@
     </section>
 
     <section
-      class="services w-screen max-w-full pt-[3rem] md:py-[2rem] h-screen md:h-[max-content] px-16 md:px-4"
+      class="services w-screen max-w-full pt-[3rem] md:pt-[4rem] md:pb-9 h-screen md:h-fit px-16 md:px-4"
     >
       <h2
-        class="text-xl flex gap-4 items-center justify-start font-medium text-orange-600"
+        class="text-xl flex gap-4 items-center justify-center font-medium text-orange-600"
       >
         <img src="./images/star-sign.svg" alt="" />
-        Our Services
+        Our Expertise
       </h2>
-      <h3 class="text-4xl md:ml-2">
-        Personalized Astrological Guidance Services
+      <h3 class="text-4xl font-medium text-center md:ml-2">
+        Trusted Vedic Astrology Guidance
       </h3>
       <div class="services-cards mt-8 md:mt-4">
-        <div class="slider1">
-          <div
-            class="!flex flex-col justify-between gap-2 !h-[600px] shadow-md bg-white rounded-lg py-6 px-6"
-          >
-            <img
-              src="./images/services/1.png"
-              class="w-full h-[250px] object-cover"
-              alt=""
-            />
-            <div class="details">
-              <div
-                class="flex flex-row justify-between font-semibold text-xl items-center"
-              >
-                <h4 class="text-2xl">Child Astrology</h4>
-                <p class="text-end">₹ 4000</p>
-              </div>
-              <div class="flex flex-row justify-between my-2 items-start">
-                <p
-                  class="flex text-sm font-normal items-center justify-start gap-2 text-gray-600"
-                >
-                  <img src="./images/star-review.svg" alt="" />4.2
-                  <span class="text-gray-400">&nbsp;(25 reviews)</span>
-                </p>
-                <p class="text-end text-green1 text-[17px] md:text-sm">
-                  25% off on 1<sup>st</sup> booking <br /><a
-                    class="text-[15px]"
-                    href="/"
-                    ><u>See more offers</u></a
-                  >
-                </p>
-              </div>
-              <div class="h-[1px] w-full my-2 bg-gray-400"></div>
-              <div class="description text-sm">
-                <p class="">
-                  Get guidance to support their development & growth with
-                  personalised astrological report
-                </p>
-                <p class="">Includes:</p>
-
-                <ol class="list-disc ml-4">
-                  <li>Kundli and Divisional birth charts</li>
-                  <li>horoscope analysis</li>
-                  <li>Child's Ayurvedic Dosha +more</li>
-                </ol>
-              </div>
-            </div>
+        <div
+          class="!flex flex-col justify-between gap-2 !h-fit shadow-md bg-white rounded-lg py-6 px-6"
+        >
+          <img
+            src="./images/services/1.png"
+            class="w-full h-[250px] object-cover"
+            alt=""
+          />
+          <div class="details">
             <div
-              class="!my-0 !important actions flex items-center justify-between md:gap-2"
+              class="flex flex-row justify-between font-semibold text-xl items-center"
             >
-              <button
-                class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
+              <h4 class="text-2xl">Child Astrology</h4>
+              <p class="text-end">₹ 4000</p>
+            </div>
+            <div class="flex flex-row justify-between my-2 items-start">
+              <p
+                class="flex text-sm font-normal items-center justify-start gap-2 text-gray-600"
               >
-                <a href="./Child-Astrology.html">View Details</a>
-              </button>
-              <button
-                class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
-              >
-                Buy Now
-              </button>
+                <img src="./images/star-review.svg" alt="" />4.2
+                <span class="text-gray-400">&nbsp;(25 reviews)</span>
+              </p>
+              <p class="text-end text-green1 text-[17px] md:text-sm">
+                25% off on 1<sup>st</sup> booking <br /><a
+                  class="text-[15px]"
+                  href="/"
+                  ><u>See more offers</u></a
+                >
+              </p>
+            </div>
+            <div class="h-[1px] w-full my-2 bg-gray-400"></div>
+            <div class="description text-sm">
+              <p class="">
+                Support your child’s development & growth in the best way
+                possible by unlocking their life's karmic potential with precise
+                Vedic advice. Help them find success by aligning their actions
+                with their ruling nakshatras and grahas (planets). Dive deep
+                into your child’s Janam Kundli, revealing:
+              </p>
+
+              <ol class="list-disc ml-4">
+                <li>Stored karma, doshas and its influence</li>
+                <li>Energy blockages hindering their progress</li>
+                <li>Ayurvedic body type for personalized wellness</li>
+                <li>Favourable and unfavourable grahas</li>
+                <li>And much more!</li>
+              </ol>
             </div>
           </div>
+          <div
+            class="!my-0 !important actions flex items-center justify-between md:gap-2"
+          >
+            <button
+              class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
+            >
+              <a href="./Child-Astrology.html">View Details</a>
+            </button>
+            <button
+              class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
+            >
+              <a href="./payment/Career-Payment.html">Buy Now</a>
+            </button>
+          </div>
+        </div>
+        <!-- <div class="slider1">
           <div
             class="!flex flex-col justify-between gap-2 !h-[600px] shadow-md bg-white rounded-lg py-6 px-6"
           >
@@ -661,7 +664,7 @@
               </button>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -683,7 +686,7 @@
         </p>
         <img
           src="./images/kundali-graphic.png"
-          class="bg-none mx-auto w-[300px] h-[300px] object-cover"
+          class="bg-none mx-auto w-[300px] h-[300px] object-contain"
           alt=""
         />
         <button
@@ -693,7 +696,7 @@
         </button>
       </div>
     </section>
-
+    <!-- 
     <section
       style="background-image: url('./images/bundle-asset.png')"
       class="bundle md:!bg-bundle-asset-sm w-screen max-w-full h-screen md:h-max pt-[5rem] md:pt-[1rem] md:pb-[8rem] md:mt-20 md:mb-8 bg-top md:bg-bottom-5 bg-contain bg-no-repeat"
@@ -752,7 +755,7 @@
           </p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section
       class="testimonials w-screen max-w-full h-screen md:h-[max-content] pt-[4rem] md:pt-2 md:pb-12"
@@ -879,33 +882,33 @@
         class="w-2/5 flex md:hidden items-start gap-8 flex-col justify-between"
       >
         <img src="./images/AsliAstro.png" class="" alt="" />
-        <p class="text-gray-400">
+        <!-- <p class="text-gray-400">
           Get daily insight and daily insiration straight to your inbox
-        </p>
-        <form class="flex flex-row border-b-2 w-fit pb-1">
+        </p> -->
+        <!-- <form class="flex flex-row border-b-2 w-fit pb-1">
           <input
             type="email"
             placeholder="Email address"
             class="border-none focus:outline-none pl-2 text-white bg-black py-1"
           />
           <img src="./images/right-arrow.svg" alt="" />
-        </form>
+        </form> -->
       </div>
       <div class="flex md:hidden flex-row justify-between mt-4 w-2/5">
         <div class="w-1/5 flex items-start gap-2 flex-col justify-start">
           <h2 class="text-white1 mb-4">Product</h2>
-          <a href="/" class="text-gray-400"> Services</a>
-          <a href="/" class="text-gray-400"> Shop</a>
+          <a href="/Products.html" class="text-gray-400"> Services</a>
+          <!-- <a href="/" class="text-gray-400"> Shop</a>
           <a href="/" class="text-gray-400"> Updates</a>
-          <a href="/" class="text-gray-400"> FAQ</a>
+          <a href="/" class="text-gray-400"> FAQ</a> -->
         </div>
         <div class="w-1/5 flex items-start gap-2 flex-col justify-start">
           <h2 class="text-white1 mb-4">Company</h2>
           <a href="/" class="text-gray-400"> About Us</a>
-          <a href="/" class="text-gray-400"> Careers</a>
-          <a href="/" class="text-gray-400"> Press</a>
+          <!-- <a href="/" class="text-gray-400"> Careers</a>
+          <a href="/" class="text-gray-400"> Press</a> -->
           <a href="/" class="text-gray-400"> Contact</a>
-          <a href="/" class="text-gray-400"> Blog</a>
+          <!-- <a href="/" class="text-gray-400"> Blog</a> -->
         </div>
         <div class="w-1/5 flex items-start gap-2 flex-col justify-start">
           <h2 class="text-white1 mb-4">Legal</h2>
@@ -918,18 +921,18 @@
         <div class="flex flex-row justify-between mt-8 w-full">
           <div class="w-1/3 flex items-start gap-2 flex-col justify-start">
             <h2 class="text-white1 mb-4">Product</h2>
-            <a href="/" class="text-gray-400"> Services</a>
-            <a href="/" class="text-gray-400"> Shop</a>
+            <a href="./Products.html" class="text-gray-400"> Services</a>
+            <!-- <a href="/" class="text-gray-400"> Shop</a>
             <a href="/" class="text-gray-400"> Updates</a>
-            <a href="/" class="text-gray-400"> FAQ</a>
+            <a href="/" class="text-gray-400"> FAQ</a> -->
           </div>
           <div class="w-1/3 flex items-start gap-2 flex-col justify-start">
             <h2 class="text-white1 mb-4">Company</h2>
             <a href="/" class="text-gray-400"> About Us</a>
-            <a href="/" class="text-gray-400"> Careers</a>
-            <a href="/" class="text-gray-400"> Press</a>
+            <!-- <a href="/" class="text-gray-400"> Careers</a>
+            <a href="/" class="text-gray-400"> Press</a> -->
             <a href="/" class="text-gray-400"> Contact</a>
-            <a href="/" class="text-gray-400"> Blog</a>
+            <!-- <a href="/" class="text-gray-400"> Blog</a> -->
           </div>
           <div class="w-1/3 flex items-start gap-2 flex-col justify-start">
             <h2 class="text-white1 mb-4">Legal</h2>
@@ -937,14 +940,14 @@
             <a href="/" class="text-gray-400"> Terms of Service</a>
           </div>
         </div>
-        <form class="flex flex-row border-b-2 w-full pb-1 my-6">
+        <!-- <form class="flex flex-row border-b-2 w-full pb-1 my-6">
           <input
             type="email"
             placeholder="Email address"
             class="border-none focus:outline-none pl-2 w-[90%] text-white bg-black py-1"
           />
           <img src="./images/right-arrow.svg" alt="" />
-        </form>
+        </form> -->
       </div>
     </footer>
 
