--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     </section>
 
     <section
-      class="services w-screen max-w-full pt-[3rem] md:pt-[4rem] md:pb-9 h-screen md:h-fit px-16 md:px-4"
+      class="services w-screen max-w-full pt-[3rem] md:pt-[4rem] md:pb-9 h-screen md:h-fit px-16 md:px-2"
     >
       <h2
         class="text-xl flex gap-4 items-center justify-center font-medium text-orange-600"
@@ -298,15 +298,17 @@
       <h3 class="text-4xl font-medium text-center md:ml-2">
         Trusted Vedic Astrology Guidance
       </h3>
-      <div class="services-cards mt-8 md:mt-4">
+      <div
+        class="services-cards flex items-center justify-center flex-wrap gap-8 mt-8 md:mt-4"
+      >
         <div
-          class="!flex flex-col justify-between gap-2 !h-fit shadow-md bg-white rounded-lg py-6 px-6"
+          class="!flex flex-col justify-between gap-2 !w-[500px] md:!w-full !h-fit shadow-md bg-white rounded-lg py-6 px-6"
         >
-          <img
-            src="./images/services/1.png"
-            class="w-full h-[250px] object-cover"
+          <div
+            style="background-image: url('./images/child-astrology/1.png')"
+            class="w-full h-[250px] bg-cover bg-no-repeat"
             alt=""
-          />
+          ></div>
           <div class="details">
             <div
               class="flex flex-row justify-between font-semibold text-xl items-center"
@@ -363,6 +365,71 @@
             </button>
           </div>
         </div>
+        <div
+          class="!flex flex-col justify-between gap-2 !w-[500px] md:!w-full !h-fit shadow-md bg-white rounded-lg py-6 px-6"
+        >
+          <div
+            style="background-image: url('./images/career-astrology/1.png')"
+            class="w-full h-[250px] bg-cover bg-no-repeat"
+            alt=""
+          ></div>
+          <div class="details">
+            <div
+              class="flex flex-row justify-between font-semibold text-xl items-center"
+            >
+              <h4 class="text-2xl">Career Astrology</h4>
+              <p class="text-end">₹ 4000</p>
+            </div>
+            <div class="flex flex-row justify-between my-2 items-start">
+              <p
+                class="flex text-sm font-normal items-center justify-start gap-2 text-gray-600"
+              >
+                <img src="./images/star-review.svg" alt="" />4.2
+                <span class="text-gray-400">&nbsp;(25 reviews)</span>
+              </p>
+              <p class="text-end text-green1 text-[17px] md:text-sm">
+                25% off on 1<sup>st</sup> booking <br /><a
+                  class="text-[15px]"
+                  href="/"
+                  ><u>See more offers</u></a
+                >
+              </p>
+            </div>
+            <div class="h-[1px] w-full my-2 bg-gray-400"></div>
+            <div class="description text-sm">
+              <p class="">
+                Support your child’s development & growth in the best way
+                possible by unlocking their life's karmic potential with precise
+                Vedic advice. Help them find success by aligning their actions
+                with their ruling nakshatras and grahas (planets). Dive deep
+                into your child’s Janam Kundli, revealing:
+              </p>
+
+              <ol class="list-disc ml-4">
+                <li>Stored karma, doshas and its influence</li>
+                <li>Energy blockages hindering their progress</li>
+                <li>Ayurvedic body type for personalized wellness</li>
+                <li>Favourable and unfavourable grahas</li>
+                <li>And much more!</li>
+              </ol>
+            </div>
+          </div>
+          <div
+            class="!my-0 !important actions flex items-center justify-between md:gap-2"
+          >
+            <button
+              class="border-orange-400 rounded-lg text-base border font-medium w-[175px] h-[42px] text-orange-500"
+            >
+              <a href="./Career-Astrology.html">View Details</a>
+            </button>
+            <button
+              class="bg-orange-400 text-base rounded-lg font-medium w-[175px] h-[42px] text-white"
+            >
+              <a href="./payment/Career-Payment.html">Buy Now</a>
+            </button>
+          </div>
+        </div>
+
         <!-- <div class="slider1">
           <div
             class="!flex flex-col justify-between gap-2 !h-[600px] shadow-md bg-white rounded-lg py-6 px-6"
