--- a/Career-Astrology.html
+++ b/Career-Astrology.html
@@ -176,30 +176,30 @@
           <div id="main-slider" class="slick-slider mb-4">
             <div>
               <img
-                src="https://via.placeholder.com/800x400"
+                src="./images/career-astrology/1.png"
                 alt="Slide 1"
-                class="w-full h-auto rounded-lg shadow-md"
+                class="min-w-full object-cover w-[500px] !h-[350px] rounded-lg shadow-md"
               />
             </div>
             <div>
               <img
-                src="https://via.placeholder.com/800x400"
+                src="./images/career-astrology/2.png"
                 alt="Slide 1"
-                class="w-full h-auto rounded-lg shadow-md"
+                class="min-w-full object-cover w-[500px] !h-[350px] rounded-lg shadow-md"
               />
             </div>
             <div>
               <img
-                src="https://via.placeholder.com/800x400"
+                src="./images/career-astrology/1.png"
                 alt="Slide 1"
-                class="w-full h-auto rounded-lg shadow-md"
+                class="min-w-full object-cover w-[500px] !h-[350px] rounded-lg shadow-md"
               />
             </div>
             <div>
               <img
-                src="https://via.placeholder.com/800x400"
+                src="./images/career-astrology/2.png"
                 alt="Slide 1"
-                class="w-full h-auto rounded-lg shadow-md"
+                class="min-w-full object-cover w-[500px] !h-[350px] rounded-lg shadow-md"
               />
             </div>
           </div>
@@ -208,30 +208,30 @@
           <div id="thumb-slider" class="slick-slider md:!hidden">
             <div>
               <img
-                src="https://via.placeholder.com/150x100"
+                src="./images/career-astrology/1.png"
                 alt="Thumb 1"
-                class="w-full h-auto rounded-md slick-thumb"
+                class="!w-[100px] !p-2 !h-[100px] rounded-md slick-thumb object-cover"
               />
             </div>
             <div>
               <img
-                src="https://via.placeholder.com/150x100"
+                src="./images/career-astrology/2.png"
                 alt="Thumb 2"
-                class="w-full h-auto rounded-md slick-thumb"
+                class="!w-[100px] !p-2 !h-[100px] rounded-md slick-thumb object-cover"
               />
             </div>
             <div>
               <img
-                src="https://via.placeholder.com/150x100"
+                src="./images/career-astrology/1.png"
                 alt="Thumb 3"
-                class="w-full h-auto rounded-md slick-thumb"
+                class="!w-[100px] !p-2 !h-[100px] rounded-md slick-thumb object-cover"
               />
             </div>
             <div>
               <img
-                src="https://via.placeholder.com/150x100"
+                src="./images/career-astrology/2.png"
                 alt="Thumb 4"
-                class="w-full h-auto rounded-md slick-thumb"
+                class="!w-[100px] !p-2 !h-[100px] rounded-md slick-thumb object-cover"
               />
             </div>
           </div>
